# flow

./: .editorconfig  .env.example  .gitignore  .mise.toml  .prettierignore  .prettierrc  AGENTS.md  BUGS_REVIEW.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  bun.lockb  coach.css  codebase_review.md  commit-timeline.html  deepeval.config.ts  esbuild.cli.mjs  esbuild.config.mjs  generate_chart.py  gtd-coach.jsx  jest.config.cjs  jest.config.js  jest.config.ts  main.ts  manifest.json  package-lock.json  package.json  pyproject.toml  requirements.txt  styles.css  tsconfig.json  tsconfig.test.json  versions.json
Templates/: Person.md  Project.md
docs/: README.md  RELEASING.md  cli-architecture.md  cli-ink-usage.md  gtd-coach-cli.md  gtd-guide.md  manual-test-plan.md  manual-testing-custom-reviews.md  priority-coach-cli.md  project-templates.md  quick-capture.md  sub-projects-handoff.md
evaluation/: .gitignore  EXAMPLE.md  README.md  evaluator.ts  run-evaluation.ts  test-cases.json  tsconfig.json
flow-cli/: .gitignore  PUBLISHING.md  README.md  esbuild.config.mjs  jest.config.js  package-lock.json  package.json
prompts/: INITIAL_SETUP.md
scripts/: create-test-vault.ts  release-beta.ts  release.mjs  release.ts  update-version-number.js  update-version-number.ts
src/: action-line-finder.ts  add-to-inbox-modal.ts  anthropic-client.ts  async-utils.ts  checkbox-utils.ts  cli-approval.ts  cli-entry.mts  cli-tools.ts  cli.ts  cli.tsx  coach-message-renderer.ts  coach-protocol-banner.ts  coach-state.ts  coach-tools.ts  commands.ts  errors.ts  (+85 more)
(+250 files in other folders)
